force-app/main/default/objects/Revenue__c/fields/Goal_Completed__c.field-meta.xml
<CustomField>
    <fullName>Goal_Completed__c</fullName>
    <label>Goal Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>