force-app/main/default/objects/Revenue__c/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <label>Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>