force-app/main/default/objects/Revenue__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>