force-app/main/default/objects/Revenue__c/fields/Total_Incomes__c.field-meta.xml
<CustomField>
    <fullName>Total_Incomes__c</fullName>
    <label>Total Incomes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>