force-app/main/default/objects/Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Revenue_Year__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Incomes__c</columns>
    <columns>Total_Expenses__c</columns>
    <columns>Net_Revenue__c</columns>
    <columns>Goal__c</columns>
    <columns>Goal_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>